--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -57,6 +57,10 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+      - name: Install GTK3
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev
       - run: rustup component add clippy
       - uses: actions-rs/cargo@v1
         with:
