--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,6 +13,10 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+      - name: Install GTK3
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev
       - uses: actions-rs/cargo@v1
         with:
           command: check
@@ -27,6 +31,10 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+      - name: Install GTK3
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev
       - uses: actions-rs/cargo@v1
         with:
           command: test
@@ -41,6 +49,7 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+          
       - run: rustup component add rustfmt
       - uses: actions-rs/cargo@v1
         with:
