--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gdk = "0.18.0"
 glib = "0.10.3"
 gtk = "0.9.0"
 nalgebra = "0.32.3"
+gdk-pixbuf = "0.9"
