--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 nalgebra = "0.32.3"
 rand = "0.8.5"
 rayon = "1.8.0"
+gdk = "0.18.0"
+glib = "0.10.3"
+gtk = "0.9.0"
+gdk-pixbuf = "0.9"
